# test

./: .gitignore  AGENTIC_README.md  README.md  agentic_context_langgraph.py  config.py  deploy-docker.sh  deploy.sh  docker-compose.yaml  example_agentic_usage.py  graph_db.py  main.py  package-lock.json  package.json  requirements.txt  sample_medical.txt  setup_graph_rag.md  text_processor.py
api/: .coverage  .dockerignore  .env.example  .gitignore  .json  Dockerfile  evra-health-firebase-adminsdk-fbsvc-11725a17af.json  faiss_index_maps.pkl  pyproject.toml  sync_mongodb_graph.py  test_goal_service.py  test_graph_rag.py  test_openai.py  test_weekly_completion.py  test_weekly_completion_update.py
api/app/: config.py  main.py  prompts.py
api/app/routers/: agent.py  auth.py  chat.py  goals.py  nudge.py  preferences.py  upload.py  user.py
api/app/routers/ai/: chat.py  goals.py  lab_report.py
api/app/routers/backend/: auth.py  health_alert.py  health_score.py  nudge.py  preferences.py  upload.py  user.py
api/app/schemas/: action_completions.py  goals.py  health_insights.py  nudge.py  planner.py  preferences.py  user.py  utils.py
api/app/schemas/ai/: goals.py  lab_report.py
api/app/schemas/backend/: health_alert.py  nudge.py  profile.py
api/app/services/: agent_manager.py  chat_service.py  db.py  document_manager.py  document_processor.py  email_utils.py  goals_service.py  graph_db.py  health_insights_service.py  mai_dxo_service.py  nudge_service.py  planner_service.py  preferences_service.py  progress_tracker.py  prompts.py  scheduler_service.py  vector_store.py
api/app/utils/ai/: prompts.py
api/scripts/: dev_server.py  prod_server.py
api/tests/: conftest.py  run_health_tests.py  sync_mongodb_graph.py  test_api_endpoints.py  test_chat_service.py  test_goal_service.py  test_graph_rag.py  test_health_alert_service.py  test_health_insight.py  test_nudge.py  test_openai.py  test_upload_integration.py  test_weekly_completion.py  test_weekly_completion_update.py  truncate_neo4j.py
(+181 files in other folders)
