[project]
name = "app"
version = "0.1.0"
description = "fastapi-Project-Engine"
authors = [
    {name = "Sourabh Mishra",email = "sourabhmishra1262@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.0"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "gunicorn>=23.0.0",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "python-multipart>=0.0.6",
    "neo4j>=5.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "langgraph>=0.0.20",
    "spacy[en-core-web-sm]>=3.7.0",
    "unstructured>=0.10.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pymongo>=4.6.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
dev = "scripts.dev_server:main"
prod = "scripts.prod_server:main"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "C4", "UP", "N", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["app"]
